--- a/package.json
+++ b/package.json
@@ -13,20 +13,26 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@vueuse/core": "^10.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.29.5",
     "lucide-vue-next": "^0.378.0",
     "nuxt": "^3.11.2",
+    "pg": "^8.11.5",
     "radix-vue": "^1.7.4",
     "shadcn-nuxt": "^0.10.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-sonner": "^1.1.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/pg": "^8.11.6",
     "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.20.18",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
