--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.574.0",
+    "@aws-sdk/s3-request-presigner": "^3.574.0",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
@@ -33,6 +35,7 @@
     "@types/pg": "^8.11.6",
     "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.20.18",
+    "nuxt-file-storage": "^0.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
